<resources>
    <string name="app_name">MyBonchProject</string>
    <string name="emailTextView">" Email"</string>
    <string name="LolTextView">Лол</string>
    <string name="e_mailEditView">E-mail</string>
    <string name="nameEditView">Имя</string>
    <string name="surnameEditView">Фамилия</string>
    <string name="passwordEditView">Пароль</string>
    <string name="passwordEditView2">Повторите пароль</string>
    <string name="registrationButton">Регистрация</string>
    <string name="isAccountTextView">Уже есть аккаунт? Войти</string>
    <string name="enteringButton">Войти</string>
    <string name="noAccountTextView">Нет аккаунта? Зарегайся!</string>
    <string name="kekTextView">Кек</string>
    <string name="good_russian_music_picture">good Russian Music Picture</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emailWarningReg">Введите адрес электронной почты</string>
    <string name="nameWarningReg">Введите имя</string>
    <string name="surnameWarningReg">Введите фамилию</string>
    <string name="passwordWarningReg">Пароли должны совпадать</string>
    <string name="welcomeFromReg">Вы успешно внесены в Тетрадь смерти!</string>
    <string name="welcomeFromSign">Можно простить уход, но как простить возвращение?</string>
    <string name="emailWarningSign">Введите электронную почту!</string>
    <string name="passwordWarningSign">Введите пароль!</string>
    <string name="dataWarningSign">Введите данные!</string>
    <string name="messageEnteringHint">Введите сообщение…</string>
    <string name="user_avatar">user avatar</string>
    <string name="entering_of_message">entering of message</string>
    <string name="nameOfChat">Герман Греф\nПросто текст</string>
    <string name="create_post_title">Title</string>
    <string name="create_post_body">Body</string>
    <string name="create_post_post">POST</string>
    <string name="menu_frag_albums">Albums</string>
    <string name="menu_frag_users">Users</string>
    <string name="menu_frag_createpost">CreatePost</string>
    <string name="empty_lines_dialog">Поля не заполнены!</string>
    <string name="empty_lines_dialog_ok">Ок</string>
    <string name="send_message_button_description">send message button</string>

    <string-array name="botMessages">
        <item>Первый ответ</item>
        <item>Второй ответ</item>
        <item>Третий ответ</item>
        <item>Четвёртый ответ</item>
        <item>Ответный ответ</item>
        <item>Шутливый ответ</item>
        <item>Усталый ответ</item>
        <item>Грутсный ответ</item>
        <item>Игнорирование</item>
        <item>Пользователь заблокирован</item>
    </string-array>
</resources>