<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".messagingAppPart.SigningPageFragment">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/emailTextView"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailAddress2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonEntering"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#6FCF97"
        android:fontFamily="sans-serif-medium"
        android:text="@string/enteringButton"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/noAccountTextView"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextEmailAddress2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp"
        android:drawableEnd="@drawable/ic_baseline_email_24"
        android:ems="10"
        android:hint="@string/e_mailEditView"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPassword3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawableEnd="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:hint="@string/passwordEditView"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/buttonEntering"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/kekTextView"
        android:textColor="@color/buttonColor"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="140dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/test_img"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintDimensionRatio="3:2"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/good_russian_music_picture" />

</androidx.constraintlayout.widget.ConstraintLayout>