<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".networkingAppPart.MenuFragment">

    <Button
        android:id="@+id/albumsButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/menu_frag_albums"
        app:layout_constraintEnd_toStartOf="@+id/newPostButton"
        app:layout_constraintTop_toTopOf="@+id/newPostButton" />

    <Button
        android:id="@+id/usersButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/menu_frag_users"
        app:layout_constraintStart_toEndOf="@+id/newPostButton"
        app:layout_constraintTop_toTopOf="@+id/newPostButton" />

    <Button
        android:id="@+id/newPostButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_frag_createpost"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>