<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".networkingAppPart.CreatePostFragment">

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/create_post_title"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextBody"
        app:layout_constraintEnd_toEndOf="@+id/editTextBody"
        app:layout_constraintStart_toStartOf="@+id/editTextBody" />

    <EditText
        android:id="@+id/editTextBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/create_post_body"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/create_post_post"
        app:layout_constraintEnd_toEndOf="@+id/editTextBody"
        app:layout_constraintStart_toStartOf="@+id/editTextBody"
        app:layout_constraintTop_toBottomOf="@+id/editTextBody" />
</androidx.constraintlayout.widget.ConstraintLayout>