<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:paddingBottom="10dp"
    android:weightSum="100"
    tools:context=".messagingAppPart.MainMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/user_avatar"
            android:visibility="visible"
            app:srcCompat="@drawable/android_fly"
            tools:srcCompat="@drawable/android_fly" />

        <TextView
            android:id="@+id/nameOfDialogTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:minHeight="70dp"
            android:text="@string/nameOfChat"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/line1"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"
        android:gravity="center_horizontal"
        android:paddingTop="5dip" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="90">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/line2"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"
        android:gravity="center_horizontal"
        android:paddingTop="5dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="horizontal"
        android:weightSum="100">

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="90"
            android:ems="10"
            android:hint="@string/messageEnteringHint"
            android:inputType="textPersonName" />

        <ImageView
            android:id="@+id/sendMessageImView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            app:srcCompat="@android:drawable/ic_menu_send" />
    </LinearLayout>
</LinearLayout>